fix layout bugs

--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,12 @@
 body {
+	background-color: #fff;
 	font-family: Montserrat, sans-serif;
-	font-size: 1.12em;
+	font-size: 18px;
+	/*font-weight: 100;*/
+}
+.site-wrapper {
+	max-width: 1920px;
+	margin: 0 auto;
 }
 .my-container {
 	height: 100%;
